--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.13.2",
     "cheerio": "^1.1.2",
+    "lucide-react": "^0.561.0",
     "natural": "^8.1.0",
     "next": "16.0.10",
     "papaparse": "^5.5.3",
